--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
            Você sabe que está apaixonado quando nem quer dormir à noite. <br>
            Porque a vida real supera qualquer um de seus sonhos. <br>
            </p>
+           
+           <a href="insta.html" target="tela"><img src="icone-insta.png" alt=""></a>
+
+           <section id="telefone"> 
+           <iframe src="home.html" name="tela" id="tela" frameborder="0">Seu navegador não é compativel</iframe>
+           </section>
+           <button class="btn"><a href="home.html" target="tela">HOME</a></button>
         </section>
 </body>
 </html>
